--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Adding config.py file.
+api_keys.py
+.DS_Store
+ipynb.checkpoints
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
